# semantic-opinion-dynamics

./: .gitignore  Makefile  README.md  Readme.md  bootstrap.py  config.yaml  main.py  personas.yaml  pyproject.toml  requirements.txt
networks/: Net_karate_club_normal_KC_N.json  Net_karate_club_skew_right_2_KC_SR2.json  Net_random_normal_ER_N.json  Net_scale_free_polarized_SF_P.json  Net_small_world_skew_right_1_SW_SR1.json  Net_small_world_skew_right_2_SW_SR2.json  Net_small_world_skew_right_3_SW_SR3.json  example_org.json
networks/Net1_ER_degroot_slices/: iter10.json  iter12.json  iter13.json  iter16.json  iter17.json  iter18.json  iter19.json  iter2.json  iter20.json  iter22.json  iter24.json  iter27.json  iter28.json  iter30.json  iter31.json  iter34.json  iter35.json  iter37.json  iter39.json  iter41.json  iter42.json  iter44.json  iter6.json
networks/Net1_agent_slices/: iter10.json  iter15.json  iter18.json  iter19.json  iter21.json  iter25.json  iter26.json  iter29.json  iter3.json  iter32.json  iter33.json  iter37.json  iter38.json  iter40.json  iter45.json  iter46.json  iter48.json  iter49.json  iter51.json  iter8.json  iter9.json
networks/Net2_SW_degroot_slices/: iter1.json  iter12.json  iter15.json  iter16.json  iter19.json  iter2.json  iter20.json  iter21.json  iter22.json  iter23.json  iter25.json  iter27.json  iter29.json  iter3.json  iter38.json  iter43.json  iter44.json  iter47.json  iter48.json  iter9.json
networks/Net2_agent_slices/: iter10.json  iter11.json  iter14.json  iter15.json  iter17.json  iter18.json  iter19.json  (+16 more)
plots/: Net3_SF.json
(+2156 files in other folders)
