[project]
name = "semantic-opinion-dynamics"
version = "0.1.0"
description = "Semantic Opinion Dynamics: LLM Agents on Complex Networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "networkx>=2.8",
  "typer>=0.9",
]

[project.scripts]
sod = "semantic_opinion_dynamics.cli:app"

[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
]

analysis = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
  "sentence-transformers>=2.2",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]